pages/base/base.css
/* ... */
.smallshut_wrapper {
  width: 100%;
  float: left;
  overflow: hidden;
}

.smallshut .uzsu {
  max-width: 15%;
  float: left;
}

.smallshut .ui-shut-txt {
  width: 30% !important;
  padding-right: 0.5%;
  display: inline-block;
  text-align: left;
}

.smallshut .ui-shut-btn,
.ui-shut-btn {
  width: 11% !important;
  padding-left: 0.5%;
  display: inline-block;
}

.smallshut .ui-shut-pic {
  width: 11% !important;
  padding-left:0%;
  display: inline-block;
}

.smallshut .ui-shut-pic .icon {
  margin-left: -5%;
  display: inline-block;
}

/**
 * ---------- UZSU Popup ------------------------------------------------
 */
.uzsuPopupContent{
  width: 100%;
  height: 100%;
}
.uzsuPopupHeader{
  font-size: 2em;
  text-align: center;
  margin-bottom: 1.2em;
}
.uzsuRow{
  clear: both;
  height: 3.8em;
}
/* work around for firefox line break issues with scrollbars */
.uzsuRow:first-of-type::after{
  content: ".";
  float: right;
  width: 30px;
  height: 1px;
  visibility: hidden;
}

.uzsuRowExpert, .uzsuRowHoliday, .uzsuRowCondition, .uzsuRowDelayedExec{
  float: left;
  height: 3.8em;
  border: 1px dotted;
  margin: 0 0.6em 1.2em 1.2em;
}
.uzsuRowExpHoli:after{
  clear: both;
  content: " ";
  display: block;
  height: 0;
}

.uzsuRowSeriesLine{
  float: left;
  height: 3.8em;
  border: 1px dotted;
  margin: 0 0.6em 1.2em 30%;
}
.uzsuRowSeries:after{
  clear: both;
  content: " ";
  display: block;
  height: 0;
}
.uzsuCellSeries{
  float: left;
  height: 3.1em;
  margin: 0.2em;
}

.uzsuRowCondition, .uzsuRowDelayedExec{
  clear: both;
}
.uzsuRowExpertText, .uzsuRowHolidayText, .uzsuRowConditionText, .uzsuRowDelayedExecText{
  height: 0em;
  font-size: 0.7em;
  position: relative;
  top: 5em;
  left: -1.5em;
  transform: rotate(270deg);
  transform-origin: 0 0;
}
.uzsuRowFooter{
  clear: both;
  height: 3.8em;
  margin-top: 1.2em;
}
.uzsuCell, .uzsuCellExpert,
.uzsuCellExpertSeries {
  float: left;
  height: 3.1em;
  margin: 0.2em;
}
.uzsuCellType1{
  float: left;
  height: 5em;
  margin: 0.2em;
}
.uzsuCellText{
  height: 0.8em;
  font-size: 0.7em;
}
.uzsuClear:after{
  content: "";
  clear: both;
  display: table;
}
.uzsuTimeInput, .uzsuTimeMaxMinInput, .uzsuTimeOffsetInput, .uzsuValueInput{
  width: 9ex !important;
  padding: 0.1em !important;
  text-align: center !important;
}

.uzsuTimeInput::-webkit-calendar-picker-indicator,
.uzsuTimeMaxMinInput::-webkit-calendar-picker-indicator {
	width: 1.8ex;
	height:1.8ex;
	margin-left: 0px;
	border: 0;
}

.uzsuTimeInput::-webkit-inner-spin-button,
.uzsuTimeMaxMinInput::-webkit-inner-spin-button,
.uzsuTimeOffsetInput::-webkit-inner-spin-button,
.uzsuValueInput::-webkit-inner-spin-button,
.uzsuTimeInput::-webkit-outer-spin-button,
.uzsuTimeMaxMinInput::-webkit-outer-spin-button,
.uzsuTimeOffsetInput::-webkit-outer-spin-button,
.uzsuValueInput::-webkit-outer-spin-button,
.uzsuTimeInput::-webkit-clear-button,
.uzsuTimeMaxMinInput::-webkit-clear-button,
.uzsuTimeOffsetInput::-webkit-clear-button,
.uzsuValueInput::-webkit-clear-button{
  -webkit-appearance: none;
  display: none;
}
.uzsuConditionValueInput, .uzsuDelayedExecValueInput{
  width: 70px !important;
  padding: 0.1em !important;
}
.uzsuConditionDeviceStringInput, .uzsuDelayedExecDeviceStringInput{
  width: 250px !important;
  padding: 0.1em !important;
}
div.ui-input-text{
  height: 1.9em;
}
div.ui-slider-switch{
  top: 1px !important;
}
.uzsuCellExpert div.ui-btn,
.uzsuCellExpertSeries div.ui-btn{
  top: 0.2em !important;
}
.ui-disable{
  opacity: 0.7 !important;
}
#uzsuPopupContent .ui-select.ui-mini {
  width: 100px;
  margin-left: 0;
  margin-right: 0;
}
.uzsuTextWideInput{
  width: 350px !important;
}
@media screen and (max-width: 625px){
  .uzsuRowExpert, .uzsuRowHoliday, .uzsuRowCondition, .uzsuRowDelayedExec, .uzsuCellExpert, .uzsuRowSeriesLine{
    display: none;
  }
}
/* tooltip (used for UZSU widget) */
[data-tip] {
  position:relative;

}
[data-tip]:before {
  /* hides the tooltip when not hovered */
  display:none;
  content:'';
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid #1a1a1a;
  position:absolute;
  top:32px;
  left:35px;
  z-index:8;
  font-size:0;
  line-height:0;
  width:0;
  height:0;
}
[data-tip]:after {
  display:none;
  content:attr(data-tip);
  position:absolute;
  top:35px;
  left: 0px;
  padding:2px 8px 2px 8px;
  background:#1a1a1a;
  color:#fff;
  z-index:9;
  font-size: 0.75em;
  height:18px;
  line-height:18px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  white-space:nowrap;
  word-wrap:normal;
}
[data-tip]:hover:before,
[data-tip]:hover:after {
  display:block;
}
.uzsuCell [data-tip]:after {
	left: -190px;
}
/**
 * ---------- UZSU Graph ------------------------------------------------
 */
 .highcharts-root .uzsu-event-sunrise {
  fill: #ffffff;
  stroke: rgba(255, 255, 255, 0.5);
}
.highcharts-root .uzsu-event-sunset {
  fill: #f44336;
  stroke: rgba(244, 67, 54, 0.5);
}
.uzsu-minmax .highcharts-graph {
  stroke-dasharray: 4px 3px;
  stroke-width: 3px;
  stroke-linecap: butt;
}
.uzsu-all-inactive g.highcharts-series,
.uzsu-all-inactive .highcharts-point,
.uzsu-all-inactive .highcharts-markers,
.uzsu-all-inactive .uzsu-active-toggler {
  fill: #808080;
  stroke: #808080;
}
[data-widget="device.uzsugraph"] .highcharts-navigator, 
[data-widget="device.uzsugraph"] .highcharts-navigator-series, 
[data-widget="device.uzsugraph"] .highcharts-navigator-xaxis,
[data-widget="device.uzsugraph"] .highcharts-navigator-yaxis {
  display: none;
}

/**
 * --- W i d g e t s :   M U L T I M E D I A ----------------------------------
 */
.music {
  position: relative;
  padding: 10px 0 10px 0;
}

.music .vol {
  width: 55px;
}

.music .vol .ui-slider {
  display: inline-block;
}

.music .ui-slider input.ui-slider-input {
  display: none !important;
}

.music .title {
  position: absolute;
  margin-left: 65px;
  top: 50px;
  left: 0;
  right: 0;
}
/* ... */

